<resources>
    <string name="app_name">lugaLuga</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">password</string>
    <string name="esqueci_senha">Esqueci Minha Senha</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="botao">Login</string>
    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="tv_qtdProduto">10pc</string>
    <string name="btn_alugar">Alugar</string>
</resources>