<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".view.ProdutoActivity">

    <TextView
        android:id="@+id/nomeProdutoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome Produto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/qtdProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_qtdProduto"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/produtoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/qtdProdutoTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/precoProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 00,00"
        android:textSize="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/produtoImg"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/alugaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alugar"
        android:textSize="22dp"
        android:textAllCaps="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/produtoImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/descricaoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/alugaBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>